--- a/dasarPemrogramanWeb/WebDasar/assets/css/style.css
+++ b/dasarPemrogramanWeb/WebDasar/assets/css/style.css
@@ -1,8 +1,13 @@
 /* font google */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+/* *{
+  border: 1px solid red;
+} */
+
 body {
   font-family: 'Quicksand', sans-serif;
+  box-sizing: border-box;
 }
 
 nav ul li a{
@@ -19,8 +24,27 @@ h2, h3 {
   color: #00a2c6;
 }
 
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.featured-image{
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+
 .profile {
   text-align: center;
+}
+
+.profile img {
+  width: 200px;
 }
 
 footer {
