--- a/dasarPemrogramanWeb/WebDasar/assets/css/style.css
+++ b/dasarPemrogramanWeb/WebDasar/assets/css/style.css
@@ -14,6 +14,11 @@ body {
   padding: 0;
 }
 
+header {
+  height: 350px;
+  width: 100%;
+}
+
 .jumbotron{
   width: 100%;
   padding: 60px;
@@ -34,6 +39,10 @@ body {
 nav {
   background-color: #00a2c6;
   padding: 5px;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  /* z-index: 100; */
 }
 
 nav ul {
