--- a/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
@@ -1,6 +1,64 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
-  color: blue;
+  box-sizing: border-box;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  background-image: url("../images/desktop/image-header.jpg");
+}
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3.5rem 3rem;
+}
+.header__nav .nav__logo-img {
+  width: 15rem;
+}
+.header__nav .nav__box {
+  display: flex;
+  align-item: center;
+}
+.header__nav .nav__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.5rem;
+  list-style-type: none;
+}
+.header__nav .nav__list .nav__item {
+  padding: 0.8rem 1.5rem;
+  border-radius: 2rem;
+  font-size: 1.6rem;
   font-family: "Barlow", sans-serif;
-  font-size: 100px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.header__nav .nav__list .nav__item .nav__link {
+  text-decoration: none;
+  color: hsl(0, 0%, 100%);
+}
+.header__nav .nav__list .nav__item:last-child {
+  text-transform: uppercase;
+  padding: 1rem 1.5rem;
+  background-color: white;
+  border-radius: 2rem;
+}
+.header__nav .nav__list .nav__item:last-child .nav__link {
+  color: hsl(212, 27%, 19%);
 }
