--- a/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
 *,
 *::after,
 *::before {
@@ -16,10 +15,26 @@ body {
   box-sizing: border-box;
 }
 
+.heading {
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+}
+.heading-primary {
+  text-transform: uppercase;
+  font-size: 3rem;
+  letter-spacing: 1rem;
+}
+
 .header {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  height: 100vh;
   background-image: url("../images/desktop/image-header.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
 }
 .header__nav {
   display: flex;
@@ -61,4 +76,21 @@ body {
 }
 .header__nav .nav__list .nav__item:last-child .nav__link {
   color: hsl(212, 27%, 19%);
+}
+.header__jumbotron {
+  display: flex;
+  flex-direction: column;
+  margin-inline: auto;
+  padding: 2rem;
+}
+.header__jumbotron .jumbotron__title {
+  color: hsl(0, 0%, 100%);
+}
+.header__jumbotron .jumbotron__arrow {
+  margin-inline: auto;
+}
+.header__jumbotron .jumbotron__arrow-img {
+  width: 2.5rem;
+  position: absolute;
+  top: 40%;
 }
