--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/layout/_header.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/layout/_header.scss
@@ -1,10 +1,14 @@
-@import "../abstract/index";
-
 .header{
+  width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  height: 100vh;
 
   background-image: url("../images/desktop/image-header.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
   
   &__nav {
     display: flex;
@@ -61,5 +65,28 @@
       }
 
   }
+
+  &__jumbotron{
+    display: flex;
+    flex-direction: column;
+
+    margin-inline: auto;
+    padding: 2rem;
+
+    .jumbotron__title {
+      color: $white;
+    }
+
+    .jumbotron__arrow{
+      margin-inline: auto;
+
+      &-img {
+        width: 2.5rem;
+        position: absolute;
+        top: 40%;
+      }
+    }
+  }
+
   
 }
