--- a/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
@@ -24,6 +24,49 @@ body {
   font-size: 3rem;
   letter-spacing: 1rem;
 }
+.heading-secondary {
+  text-transform: capitalize;
+  font-size: 2.5rem;
+}
+
+.card-content {
+  display: flex;
+}
+.card-content--transform {
+  flex-direction: row-reverse;
+}
+.card-content--transform .card-content__header-image {
+  background-image: url("../images/desktop/image-transform.jpg");
+}
+.card-content--standout {
+  flex-direction: row;
+}
+.card-content--standout .card-content__header-image {
+  background-image: url("../images/desktop/image-stand-out.jpg");
+}
+.card-content__header {
+  width: 50%;
+}
+.card-content__header-image {
+  height: 75vh;
+  background-size: cover;
+  background-position: center;
+}
+.card-content__detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3rem;
+  width: 50%;
+  padding-inline: 10rem;
+}
+.card-content__detail-title {
+  color: hsl(212, 27%, 19%);
+}
+.card-content__detail-paragraf {
+  font-size: 1.4rem;
+  line-height: 2.5rem;
+}
 
 .header {
   width: 100%;
@@ -34,7 +77,7 @@ body {
   background-image: url("../images/desktop/image-header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
 }
 .header__nav {
   display: flex;
@@ -91,6 +134,18 @@ body {
 }
 .header__jumbotron .jumbotron__arrow-img {
   width: 2.5rem;
+  height: 15%;
   position: absolute;
   top: 40%;
+}
+
+.about {
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+}
+.about__content-box {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
