--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_typography.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_typography.scss
@@ -7,4 +7,9 @@
     font-size: 3rem;
     letter-spacing: 1rem;
   }
+
+  &-secondary {
+  text-transform: capitalize; 
+  font-size: 2.5rem;
+  }
 }
