--- a/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
@@ -42,11 +42,17 @@ body {
 .card-content--transform .card-content__detail-title {
   max-width: 290px;
 }
+.card-content--transform .card-content__detail-link::after {
+  background-color: hsl(51, 100%, 49%);
+}
 .card-content--standout {
   flex-direction: row;
 }
 .card-content--standout .card-content__header-image {
   background-image: url("../images/desktop/image-stand-out.jpg");
+}
+.card-content--standout .card-content__detail-link::after {
+  background-color: hsl(7, 99%, 70%);
 }
 .card-content__header {
   width: 50%;
@@ -74,6 +80,31 @@ body {
   font-size: 1.4rem;
   line-height: 2.5rem;
 }
+.card-content__detail-link {
+  position: relative;
+  font-size: 1.5rem;
+  font-size: 900;
+  font-family: "Fraunces", serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: hsl(212, 27%, 19%);
+}
+.card-content__detail-link::after {
+  content: "";
+  height: 1rem;
+  left: -0.4rem;
+  bottom: -0.3rem;
+  position: absolute;
+  width: 115px;
+  border-radius: 1rem;
+  opacity: 0.4;
+  transition: opacity 0.5s ease-in;
+}
+.card-content__detail-link:hover::after {
+  opacity: 1;
+  z-index: -1;
+}
+
 .header {
   width: 100%;
   display: flex;
