--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/component/_card.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/component/_card.scss
@@ -57,8 +57,12 @@
     }
 
     &-paragraf{
+      font-family: $font-Barlow;
+      font-weight: 700;
       font-size: 1.4rem;
       line-height: 2.5rem;
+      max-width: 350px;
+      color: $dark-grayish-blue;
     }
 
     &-link {
