--- a/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/css/style.css
@@ -13,6 +13,8 @@ html {
 
 body {
   box-sizing: border-box;
+  max-width: 1440px;
+  margin-inline: auto;
 }
 
 .heading {
@@ -28,6 +30,18 @@ body {
   text-transform: capitalize;
   font-size: 2.5rem;
   line-height: 3.5rem;
+}
+.heading-tersieary {
+  text-transform: capitalize;
+  font-size: 2rem;
+}
+
+.paragraf {
+  font-family: "Barlow", sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 2.5rem;
+  max-width: 350px;
 }
 
 .card-content {
@@ -66,6 +80,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-inline: auto;
   gap: 3rem;
   max-width: 50%;
   width: 100%;
@@ -77,11 +92,6 @@ body {
   color: hsl(212, 27%, 19%);
 }
 .card-content__detail-paragraf {
-  font-family: "Barlow", sans-serif;
-  font-weight: 700;
-  font-size: 1.4rem;
-  line-height: 2.5rem;
-  max-width: 350px;
   color: hsl(232, 10%, 55%);
 }
 .card-content__detail-link {
@@ -107,6 +117,38 @@ body {
 .card-content__detail-link:hover::after {
   opacity: 1;
   z-index: -1;
+}
+
+.box-services {
+  width: 50%;
+  padding-top: 35rem;
+  padding-bottom: 3rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box-services--graphicdesign {
+  background-image: url("../images/desktop/image-graphic-design.jpg");
+}
+.box-services--graphicdesign .box-services__container {
+  color: hsl(167, 40%, 24%);
+}
+.box-services--photography {
+  background-image: url("../images/desktop/image-photography.jpg");
+}
+.box-services--photography .box-services__container {
+  color: hsl(198, 62%, 26%);
+}
+.box-services--photography .box-services__paragraf {
+  max-width: 300px;
+}
+.box-services__container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin-inline: auto;
+  gap: 2.5rem;
+  width: 70%;
 }
 
 .header {
@@ -182,11 +224,17 @@ body {
 
 .about {
   width: 100%;
-  min-height: 100%;
   height: 100%;
 }
 .about__content-box {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.services {
+  max-width: 100%;
+}
+.services__box-content {
+  display: flex;
 }
