--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_typography.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_typography.scss
@@ -13,4 +13,17 @@
   font-size: 2.5rem;
   line-height: 3.5rem;
   }
+
+  &-tersieary {
+    text-transform: capitalize;
+    font-size: 2rem;
+  }
+}
+
+.paragraf {
+  font-family: $font-Barlow;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 2.5rem;
+  max-width: 350px;
 }
