--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/main.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/main.scss
@@ -3,7 +3,7 @@
 @import "base/base";
 @import "base/typography";
 
-@import "component/card";
-@import "component/box-services";
+@import "component/index-component";
+
 
 @import "page/home";
