--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_base.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_base.scss
@@ -3,7 +3,7 @@
 *::before {
   padding: 0;
   margin: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -13,5 +13,6 @@ html {
 body {
   box-sizing: border-box;
   max-width: 1440px;
+  width: 100%;
   margin-inline: auto;
 }
