--- a/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_base.scss
+++ b/dasarPemrogramanWeb/tugas-akhir/assets/sass/base/_base.scss
@@ -15,4 +15,11 @@ body {
   max-width: 1440px;
   width: 100%;
   margin-inline: auto;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar{
+  display: none;
 }
